--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "tailwindcss": "^3.3.3",
         "typescript": "~5.1.6",
         "vite": "^4.4.6",
+        "vite-plugin-pwa": "^0.17.0",
         "vitest": "^0.33.0",
         "vue-tsc": "^1.8.6"
     }
