--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "cvl-hospitalization-reports",
+    "name": "Hospitalization",
     "version": "0.0.0",
     "private": true,
     "scripts": {
@@ -15,6 +15,7 @@
     "dependencies": {
         "@tailwindcss/forms": "^0.5.4",
         "axios": "^1.5.0",
+        "http-server": "^14.1.1",
         "pinia": "^2.1.7",
         "vue": "^3.3.4",
         "vue-router": "^4.2.4"
