--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Hospitalization",
+    "name": "hospitalization-ui",
     "version": "0.0.0",
     "private": true,
     "scripts": {
