chore: dockerfile adjustments

--- a/.build/Dockerfile
+++ b/.build/Dockerfile
@@ -1,12 +1,12 @@
-FROM node:18-alpine
+FROM node:18-alpine AS builder
 
-WORKDIR /app
+WORKDIR /hospitalizacao-ui
 
-COPY package*.json /app/
+COPY package*.json /hospitalizacao-ui/
 
 RUN npm ci
 
-COPY . /app/
+COPY . /hospitalizacao-ui/
 
 ARG VITE_SERVER_URL
 ARG VITE_WS_URL
@@ -14,8 +14,10 @@ ARG VITE_WS_URL
 RUN echo "VITE_SERVER_URL=$VITE_SERVER_URL" >> .env.production
 RUN echo "VITE_WS_URL=$VITE_WS_URL" >> .env.production
 
+# EXPOSE 8080
+
 RUN npm run build
 
-EXPOSE 8080
+FROM nginx:alpine
 
-CMD ["npx", "http-server", "dist"]
+COPY --from=builder /dist /usr/share/nginx/html
