--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "@tailwindcss/forms": "^0.5.4",
         "axios": "^1.5.0",
+        "caniuse-lite": "^1.0.30001642",
         "http-server": "^14.1.1",
         "pinia": "^2.1.7",
         "vue": "^3.3.4",
