--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
     "name": "hospitalization-ui",
     "version": "0.0.0",
     "private": true,
+        "engines": {
+        "node": ">=20",
+        "npm": ">=10.8.1"
+    },
     "scripts": {
         "dev": "vite --host",
         "build": "run-p type-check build-only",
@@ -15,12 +19,9 @@
     "dependencies": {
         "@tailwindcss/forms": "^0.5.4",
         "axios": "^1.5.0",
-        "caniuse-lite": "^1.0.30001642",
-        "http-server": "^14.1.1",
         "pinia": "^2.1.7",
         "vue": "^3.3.4",
-        "vue-router": "^4.2.4",
-        "vue3-toastify": "^0.2.1"
+        "vue-router": "^4.2.4"
     },
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.3.2",
@@ -44,7 +45,6 @@
         "typescript": "~5.1.6",
         "vite": "^4.4.6",
         "vite-plugin-pwa": "^0.17.0",
-        "vitest": "^0.33.0",
-        "vue-tsc": "^1.8.6"
+        "vue-tsc": "^1.6.5"
     }
 }
