--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "hospitalization-ui",
     "version": "0.0.0",
     "private": true,
-        "engines": {
+    "engines": {
         "node": ">=20",
         "npm": ">=10.8.1"
     },
@@ -18,7 +18,7 @@
     },
     "dependencies": {
         "@tailwindcss/forms": "^0.5.4",
-        "axios": "^1.5.0",
+        "axios": ">=1.7.4",
         "pinia": "^2.1.7",
         "vue": "^3.3.4",
         "vue-router": "^4.2.4"
