chore: config of nginx in container

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,12 +1,19 @@
 .vscode
-node_modules
-dev-dist
-.vscode
+.deployments/
+.github/
 .env.example
 .env
 .env.develpment
 .env.production
-README.md
 .gitignore
 .build
 .prettierrc.json
+.eslintrc.cjs
+tsconfig*
+vite.config.ts
+tailwind.config.js
+postcss.config.js
+README.md
+
+node_modules/
+dev-dist/
